   in upgraded dbs, not in new games created from minimal db. Reported by
   Ben Ramsey. [MG]
 * Fix a crash bug in @function/restrict on malformed input. Reported by
   Padraic. [SW]
 * Some fixes to the test suite. Reported by Covenent. [MG]
 * @pageformat included nospoof information. Reported by Jules. [MG]
 * case() clobbered $0-$9 subs. Reported by Jules. [MG]

Version 1.8.4 patchlevel 6                                 Jul 29,  2011

Minor changes:
 * Clean up the linux inotify file monitoring code a bit. [SW]
 * @forwardlist can be inherited (But defaults to no-inherit). Suggested
   by Padraic.
 * @pemit/port now takes the /list switch, to pemit multiple ports at once.
   Suggested by Padraic. [MG]
 * When you 'register' a character at the connect screen, you can re-use the
   command to send a new password to the same email address, as long as you
   haven't connected yet. Suggested by Minion. [MG]
 * @odescribe/@adescribe are no longer triggered when a Terse player moves
   into a room, as he doesn't see the @describe. Suggested by Padraic. [MG]
 * exit-oneway and exit-multiple warning checks now take global exits
   into account. Suggested by Padraic and qa'toq. [SW]

Functions:
 * valid() can be used with the 'qreg' category to check if a string
   is a valid q-register name.  [SW]
 * crecall() now returns an error when given an invalid channel, and no
   longer returns an error when used on a channel with nothing to recall.
   Suggested by Trinsec. [MG]
 * Added uptime(), which returns much of the information from @uptime.
   From a suggestion by Jules. [MG]
 * quota() now accepts 'me' as an argument. Suggested by Padraic. [MG]
 * remove() is now ANSI-aware. [MG]
 * money() now checks for an integer argument before checking for an object.
   Suggested by qa'toq. [MG]
   
Fixes:
 * Wildcard matches on ANSI'd strings sometimes failed. Reported by Duckwa
   and Paige. [MG]
 * Bug in matching code when a room tries to locate an exit. Reported by